# UniNotepad

./: .gitignore  .vercelignore  CLAUDE.md  README.md  adv.md  index.html  package-lock.json  package.json  release-note.md  release.sh  toDo.txt  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: index.html
scripts/: install-macos.sh
site/: README.md  index.html  package-lock.json  package.json  vercel.json
site/api/download/: [os].js
src/: contextmenu.ts  dialogs.ts  editor.ts  ipc.ts  language.ts  lineops.ts  main.ts  menu.ts  mermaid-lang.ts  mermaid-view.ts  modal.ts  preferences.ts  preview.ts  recent.ts  session.ts  settings.ts  state.ts  statusbar.ts  styles.css  tabs.ts  theme.ts  title.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: encoding.rs  fsio.rs  lib.rs  main.rs  menu.rs  watcher.rs
src-tauri/src/commands/: file.rs  mod.rs  session.rs
src-tauri/src/session/: model.rs  store.rs
