[package]
name = "uninotepad"
version = "0.7.0"
description = "Lightweight cross-platform plain-text editor"
authors = ["UniNotepad"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "uninotepad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
encoding_rs = "0.8"
chardetng = "0.1"
atomicwrites = "0.4"
tauri-plugin-opener = "2.5.4"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
notify = "8"
notify-debouncer-mini = "0.7"

# Size-optimized release profile (lightweight binary).
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
